sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:31: error: illegal start of simple expression
  for (i <- Blanc+1 to Rouge) {if (getCouleur(i) == ROUGE)}
                                                          ^