sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def insertionSort() {
  val n = getNombreValeurs()
  var v = 0
  var k = 0
  var m = 0
  for (i<- 1 to n-1) {
    k = i
    v = getValeur(i)
    var b = false
    var j = i-1
    while (j>= 0 && !b){if (getValeur(j) > v) {setValeur(j+1,getValeur(j));k = j} else {b = true};j-=1
  }
   setValeur(k,v)
  }}



def solve() {
  val n = getTaille()
  var Bleu = 0
  var Rouge = n-1
  var Blanc = n-1
  var c = BLEU
  while (Bleu < Blanc) {
    c = getCouleur(Bleu)
    if (c == ROUGE) {echange(Bleu,Rouge);Rouge -= 1;Blanc -= 1}
    else {if (c == BLANC) {echange(Blanc,Bleu);Blanc -=1}
          else {Bleu +=1}}
  }
  for (i <- Blanc+1 to Rouge) {if (getCouleur(i) == ROUGE)}
}